--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "chatterup",
   "version": "1.0.0",
-  "main": "main.js",
   "type": "module",
+  "main": "index.js",
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon index.js"
   },
   "author": "Khushansh Arora",
   "license": "ISC",
